--- a/trunk/diamandas/news/templates/news/news_show.html
+++ b/trunk/diamandas/news/templates/news/news_show.html
@@ -7,7 +7,7 @@
 {% if object %}
 <h2>{{ object.news_title }}</h2>
 <p>{{ object.news_text|cbc }}</p>
-<b>{% trans "Added" %}</b>: {{ object.news_date }} | [<a href="/forum/">Komentuj na Forum</a>]<br /><br />
+<b>{% trans "Added" %}</b>: {{ object.news_date }}<br /><br />
 {% else %}
 {% trans "No news" %}
 {% endif %}
@@ -15,7 +15,6 @@
 {% endblock %}
 
 {% block leftmenu %}
-<ul>
 <li><a href="/news/">{% trans "News Main Page" %}</a></li>
-</ul>
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
 {% endblock %}
