--- a/trunk/diamandas/userpanel/templates/userpanel/panel.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/panel.html
@@ -9,3 +9,7 @@
 	- <a href="/user/userlist/"><b>{% trans "User List" %}</b></a><br />
 </div>
 {% endblock %}
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% endblock %}
