--- a/trunk/diamandas/userpanel/templates/userpanel/pmessage.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/pmessage.html
@@ -17,3 +17,7 @@
 <div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Send Message" %}" style="actiontable"></div><br /></div>
 </form>
 {% endblock %}
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% endblock %}
