--- a/trunk/diamandas/userpanel/templates/userpanel/register.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/register.html
@@ -33,3 +33,7 @@
 <br /><div class="box"><br /><div style="text-align:center;"><input type="submit" value="{% trans "Register My" %}" class="actiontable"></div><br /></div>
 </form>
 {% endblock %}
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% endblock %}
