--- a/trunk/diamandas/userpanel/templates/userpanel/userlist.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/userlist.html
@@ -17,3 +17,7 @@
           </table>
 </div>
 {% endblock %}
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% endblock %}
