--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/edit_post.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/edit_post.html
@@ -30,3 +30,13 @@
 </form>
 <br><b>{% trans "Allowed HTML Tags" %}</b>: b, a, i, br, p, u, img, li, ul, ol, center, sub, sup, cite, blockquote</div>
 {% endblock %}
+
+{% block leftmenu %}
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% if perms.is_authenticated %}
+<li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
+<li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
+<li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
+{% else %}
+<li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
+{% endif %}{% endblock %}
