--- a/trunk/diamandas/myghtyboard/templates/myghtyboard/move_topic.html
+++ b/trunk/diamandas/myghtyboard/templates/myghtyboard/move_topic.html
@@ -15,3 +15,13 @@
 <input type="submit" value="{% trans "Move Topic" %}" style="actiontable" />
 </form></div><br /></div>
 {% endblock %}
+
+{% block leftmenu %}
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% if perms.is_authenticated %}
+<li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
+<li><a href="/forum/mytopics/">{% trans "My Topics" %}</a></li>
+<li><a href="/forum/myptopics/">{% trans "My Posts" %}</a></li>
+{% else %}
+<li><a href="/forum/lasttopics/">{% trans "Last Active Topics" %}</a></li>
+{% endif %}{% endblock %}
