--- a/trunk/diamandas/stats/templates/stats/google.html
+++ b/trunk/diamandas/stats/templates/stats/google.html
@@ -2,10 +2,7 @@
 {% extends "wiki/body.html" %}
 {% block content %}
 <h2>{% trans "Google Keywords" %}</h2><br />
-<b>Wejścia z Google</b>: {{ google }} %<br />
-<b>Wejścia z jakilinux.org</b>: {{ jaki }} %<br />
-<b>Wejścia z wykop.pl</b>: {{ wykop }} %<br />
-<b>Wejścia z wikipedii</b>: {{ wiki }} %<br /><br />
+<b>{% trans "Share of Google entries" %}</b>: {{ google }} %<br /><br />
 
 {% for r in refs %}
 <b>{{ r.word }}</b>: {{ r.count }}<br />
