--- a/trunk/diamandas/userpanel/templates/userpanel/login.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/login.html
@@ -27,9 +27,7 @@
 	</form></div>
 
 {% endblock %}
-
-
-
-
-
-
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
+{% endblock %}
