--- a/trunk/diamandas/userpanel/templates/userpanel/show_profile.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/show_profile.html
@@ -10,17 +10,13 @@
               <td><a href="mailto:{{ profile.email }}">{{ profile.email }}</a><br /><br /><a href="/user/pmessage/{{ profile.username }}/"><b>{% trans "Send Message" %}</b></a></td>
             </tr>
             <tr class="rowB">
-              <td><b>{% trans "Signature" %}</b></td>
-              <td>{{ profile.signature }}</td>
-            </tr>
-            <tr class="rowA">
               <td><b>{% trans "Public Info" %}</b></td>
               <td>{{ profile.public_info }}</td>
             </tr>
-            <tr class="rowB">
-              <td><b>{% trans "Contacts" %}</b></td>
-              <td>{{ profile.contacts }}</td>
-            </tr>
           </table>
 </div>
+{% endblock %}
+{% block leftmenu %}
+<li><a href="/">{% trans "Wiki Main Page" %}</a></li>
+<li><a href="/forum/">{% trans "Forum Main Page" %}</a></li>
 {% endblock %}
