--- a/trunk/diamandas/wiki/templates/wiki/indexPage.html
+++ b/trunk/diamandas/wiki/templates/wiki/indexPage.html
@@ -3,7 +3,7 @@
 {% extends "wiki/body.html" %}
 
 {% block leftmenu %}
- <li><a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a></li><li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a></li><li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li><li><a onclick="window.print();">{% trans "Print Page" %}</a></li><li><a href="/wiki/sitemap.xml">{% trans "sitemap.xml" %}</a></li>
+ <li><a href="/wiki/edit/{{ page.slug }}/">{% trans "Edit" %}</a></li><li><a href="/wiki/history/{{ page.slug }}/">{% trans "Page History" %}</a></li><li><a href="/wiki/add/">{% trans "Add a Page" %}</a></li><li><a onclick="window.print();">{% trans "Print Page" %}</a></li><li><a href="/sitemap.xml">{% trans "sitemap.xml" %}</a></li>
 {% endblock %}
 
 {% block header %}
