--- a/trunk/diamandas/gcodesearch/templates/gcodesearch/search.html
+++ b/trunk/diamandas/gcodesearch/templates/gcodesearch/search.html
@@ -1,4 +1,5 @@
-{% load i18n %}{% extends "pages/body.html" %}
+{% extends "pages/body.html" %}
+{% load i18n %}
 {% block header %}{% trans "Code Search" %}{% endblock %}
 {% block title %}{% trans "Code Search" %}{% endblock %}
 {% block description %}{% trans "GData Powered Code Search" %}{% endblock %}
