--- a/trunk/diamandas/pages/templates/pages/show.html
+++ b/trunk/diamandas/pages/templates/pages/show.html
@@ -5,13 +5,7 @@
 {% block description %}{{ page.description }}{% endblock %}
 {% block crumb %}{% ifequal page.content_type "book" %}<a href="/">{% trans "Home" %}</a> > {{ page.title }}{% else %}<a href="/">{% trans "Home" %}</a>{% if crumb %} > {{ crumb|safe }}{% endif %} > {{ page.title }}{% endifequal %}{% endblock %}
 
-{% block content %}{{ page.text|cbc|safe }}
-
-{% ifequal sid 6 %}<div class="box" style="text-align:center;" id="barfoo"><b>Propagate this article</b>: {% if page.digg %}<a href="{{ page.digg }}" target="_blank">Vote on Digg</a>{% else %}<a href="http://digg.com/submit?phase=2&amp;url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">Digg.com</a>{% endif %} | 
-<a href="http://del.icio.us/post?url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">del.icio.us</a> | 
-{% if page.reddit %}<a href="{{ page.reddit }}" target="_blank">Vote on Reddit</a>{% else %}<a href="http://reddit.com/submit?url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">reddit.com</a>{% endif %}</div>{% else %}<div class="box" style="text-align:center;" id="barfoo"><b>Poleć artykuł innym</b> : {% if page.wykop %}<a href="{{ page.wykop }}" target="_blank">Głosuj na tą stronę na Wykopie</a>{% else %}<a href="http://www.wykop.pl/dodaj?url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">Wykop.pl</a>{% endif %}
-{% if page.jakilinux %} | <a href="{{ page.jakilinux }}" target="_blank">Głosuj na osnews.pl</a>{% else %} | <a href="http://osnews.pl/dodaj-niusa/?external=True&amp;title={{ page.title }}&amp;url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">OSnews.pl</a>{% endif %} | 
-<a href="http://del.icio.us/post?url=http://www.{{ domain }}/w/p/{{ page.slug }}/" target="_blank">del.icio.us</a></div>{% endifequal %}{% endblock %}
+{% block content %}{{ page.text|cbc|safe }}{% endblock %}
 {% block right %}
 <h4>{% trans "Options" %}</h4>
 <ul>
