--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -1,18 +1,23 @@
 {% extends "pages/body.html" %}
 {% load i18n %}{% load cbc %}
-
-{% block title %}Diamanda{% endblock %}
-{% block description %}Diamanda{% endblock %}
-{% block header %}Diamanda{% endblock %}
-{% block crumb %}Diamanda{% endblock %}
+{% block crumb %}{{ site_name }}{% endblock %}
 
 {% block content %}
 Diamanda Application Set :) Visit <a href="http://www.rkblog.rk.edu.pl">rkblog.rk.edu.pl</a> for support, docs and more :)
 <div>
-{% for i in entries %}<h3><a href="/w/p/{{ i.slug }}/"><b>{{ i.title }}</b></a></h3>
+{% for i in entries %}<h4><a href="/w/p/{{ i.slug }}/"><b>{{ i.title }}</b></a></h4>
 <div class="important">{% ifequal i.content_type "news" %}<img src="/site_media/layout/news.png" alt="" />{% else %}<img src="/site_media/layout/article.png" alt="" />{% endifequal %}</div>
-{{ i.description|cbc|safe }}<div class="box" style="margin-bottom:30px;"><b>{% trans "Added:" %}</b> {{ i.date|date:"d.m.Y" }} | <a href="/w/p/{{ i.slug }}/"><b>{% trans "Read" %}</b></a> | <a href="/com/{{ i.id }}/1/"><b>{% trans "Comments" %}</b></a>{%if i.is_update %} | <b>{% trans "Update!" %}</b> {{ i.changes }}{% endif %}{%if i.place %} | <b>{% trans "Book:" %}</b> <a href="/w/p/{{ i.place.slug }}/">{{ i.place }}</a>{% endif %}
-</div>{% endfor %}
+{{ i.description|cbc|safe }}
+<ul class="newsbox">
+
+<li id="added">{{ i.date|date:"d.m.Y" }}</li>
+<li id="read"><a href="/w/p/{{ i.slug }}/">{% trans "Read" %}</a></li>
+<li id="comment"><a href="/com/{{ i.id }}/1/">{% trans "Comments" %}</a></li>
+{%if i.place %}<li id="book"><a href="/w/p/{{ i.place.slug }}/">{{ i.place }}</a></li>{% endif %}
+{%if i.is_update %}<li id="update">{{ i.changes }}</li>{% endif %}
+</ul>
+
+{% endfor %}
 </div>{% endblock %}
 
 {% block right %}
@@ -21,12 +26,9 @@ Diamanda Application Set :) Visit <a href="http://www.rkblog.rk.edu.pl">rkblog.r
 	<ul>{% for t in itopics %}<li><a href="/forum/topic/{{ t.topic_last_pagination_page }}/{{ t.id }}/">{{ t.topic_name }}</a> ({{ t.last }})</li>{% endfor %}{% endif %}</ul><br />
 {% if com %}<h4>{% trans "Latests Comments" %}</h4>
 	<ul>{% for t in com %}<li><a href="/com/{{ t.appid }}/{{ t.apptype }}/">{{ t.title }}</a></li>{% endfor %}</ul>{% endif %}
-{% ifequal sid 5 %}<h4><a href="/bgate/list/">{% trans "Latest Characters" %}</a></h4>
-	<ul>{% for t in characters %}<li><a href="/bgate/show/{{ t.id }}/">{{ t.name }} ({{ t.main_class }})</a></li>{% endfor %}</ul>
-<br />{% endifequal %}
-{% ifequal sid 2 %}<h4 class="headers"><a href="/tra/list/">{% trans "Latest Translations" %}</a></h4>
+<h4 class="headers"><a href="/tra/list/">{% trans "Latest Translations" %}</a></h4>
 	<ul>{% for t in tra %}<li><a href="/tra/show/{{ t.id }}/">{{ t.name }}</a></li>{% endfor %}</ul>
-<br />{% endifequal %}
+<br />
 <h4>{% trans "Users online" %}</h4>
 	<ul>{% for t in onsite %}<li>{{ t.username }}</li>{% endfor %}</ul>
 {% endblock %}
